--- a/loginpainel.html
+++ b/loginpainel.html
@@ -95,85 +95,51 @@ input::placeholder{opacity:.55}
   <div class="panel">
     <div class="brand">
       <h1>Portal SiqueiraX</h1>
-      <p>Login do Painel</p>
+      <p>Autorização do Painel</p>
     </div>
 
     <div class="card">
-      <div class="field">
-        <label>Usuário</label>
-        <input id="u" placeholder="seu user" autocomplete="username" />
-      </div>
-
-      <div class="field">
-        <label>Senha</label>
-        <input id="p" type="password" placeholder="sua senha" autocomplete="current-password" />
-      </div>
-
-      <button class="btn" id="btnLogin">ENTRAR</button>
+      <button class="btn" id="btnGo">CONTINUAR</button>
       <div class="msg" id="msg"></div>
     </div>
   </div>
 
-<script>
+<script type="module">
+  const btn = document.getElementById("btnGo");
   const msg = document.getElementById("msg");
-  const btn = document.getElementById("btnLogin");
-  const u = document.getElementById("u");
-  const p = document.getElementById("p");
 
   function setMsg(text, type) {
     msg.className = "msg" + (type ? " " + type : "");
     msg.textContent = text || "";
   }
 
-  function getReturnTo() {
-    const url = new URL(window.location.href);
-    const r = url.searchParams.get("return");
-    return r && r.startsWith("/") ? r : "/painelsiqueirax.html";
+  async function ensureNormalSession() {
+    // igual ao VIP: exige sessão normal antes
+    const r = await fetch("/.netlify/functions/me", {
+      credentials: "include",
+      cache: "no-store"
+    });
+    if (!r.ok) throw new Error("no-normal-session");
   }
 
   btn.addEventListener("click", async () => {
-    setMsg("", "");
     btn.disabled = true;
-    setMsg("Entrando...", "");
-
-    const username = (u.value || "").trim();
-    const password = (p.value || "").trim();
-
-    if (!username || !password) {
-      btn.disabled = false;
-      setMsg("Preencha usuário e senha.", "err");
-      return;
-    }
+    setMsg("Verificando sessão...", "");
 
     try {
-      const r = await fetch("/.netlify/functions/login_painel", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ username, password }),
-        credentials: "include",
-        cache: "no-store"
-      });
-
-      const text = await r.text();
-
-      if (!r.ok) {
-        btn.disabled = false;
-        setMsg(text || "Falha no login.", "err");
-        return;
-      }
-
-      setMsg("OK! Indo pro painel...", "ok");
-      window.location.href = getReturnTo();
-    } catch (e) {
-      btn.disabled = false;
-      setMsg("Erro de rede.", "err");
+      await ensureNormalSession();
+      setMsg("OK! Autorizando painel...", "ok");
+      // cria sx_painel_session e manda pro painel
+      window.location.href = "/.netlify/functions/painel-authorize?return=/painelsiqueirax.html";
+    } catch {
+      setMsg("Você precisa estar logado no site primeiro.", "err");
+      // manda pro login normal
+      window.location.href = "/login.html";
     }
   });
 
-  // Enter para logar
-  document.addEventListener("keydown", (e) => {
-    if (e.key === "Enter") btn.click();
-  });
+  // auto (opcional): já tenta sozinho igual alguns fluxos
+  btn.click();
 </script>
 </body>
 </html>
