--- a/painelsiqueirax.html
+++ b/painelsiqueirax.html
@@ -304,9 +304,8 @@ try {
   }
 
   me = await r.json()
-} catch (e) {
+} catch {
   window.location.href = "loginpainel.html"
-  throw e
 }
 
 const userPill = document.getElementById('userPill')
