--- a/loginpainel.html
+++ b/loginpainel.html
@@ -257,7 +257,7 @@ button:disabled{
     });
     if (!r.ok) throw new Error();
   } catch {
-    window.location.href = "login.html";
+    window.location.href = "loginpainel.html";
     throw new Error("no-normal-session");
   }
 
